adding assignment class

--- a/VSProject_1/VSProject_1.vcxproj.filters
+++ b/VSProject_1/VSProject_1.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="StringTokenizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Assignment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
