--- a/VSProject_1/VSProject_1.vcxproj
+++ b/VSProject_1/VSProject_1.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="StringTokenizer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Assignment.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="StringTokenizer.h" />
   </ItemGroup>
