--- a/VSProject_1/VSProject_1.vcxproj
+++ b/VSProject_1/VSProject_1.vcxproj
@@ -149,11 +149,13 @@
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Project_1_Main.cpp" />
     <ClCompile Include="StringTokenizer.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assignment.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="StringTokenizer.h" />
+    <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
