--- a/VSProject_1/VSProject_1.vcxproj.filters
+++ b/VSProject_1/VSProject_1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Assignment_Book.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Assignment.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Date.h">
