--- a/VSProject_1/VSProject_1.vcxproj
+++ b/VSProject_1/VSProject_1.vcxproj
@@ -147,7 +147,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Assignment.cpp" />
-    <ClCompile Include="Assignment_Book.cpp" />
+    <ClCompile Include="Assignment_Book.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Project_1_Main.cpp" />
     <ClCompile Include="StringTokenizer.cpp" />
@@ -155,11 +157,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assignment.h" />
-    <ClInclude Include="Assignment_Book.h" />
+    <ClInclude Include="Assignment_Book.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="Date.h" />
     <ClInclude Include="Ordered_List.h" />
     <ClInclude Include="StringTokenizer.h" />
     <ClInclude Include="UserInterface.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="output.txt" />
+    <Text Include="tester.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
